# src/routes/index.js
@@ -1,21 +1,24 @@
 const express = require('express');
 const router = express.Router();
 const OrderController = require('../controllers/OrderController');
-
-/**
- * ARQUIVO DE ROTAS - CORRIGIDO
- * A ordem importa! Rotas específicas devem vir antes de rotas dinâmicas (:id).
- */
+const AuthController = require('../controllers/AuthController');
+const authMiddleware = require('../middlewares/auth');
 
 router.get('/', (req, res) => res.json({ status: 'API Jitterbit Online' }));
 
-// --- 1. ROTAS ESPECÍFICAS (Devem vir primeiro) ---
-router.post('/order', OrderController.create);      // Criar
-router.get('/order/list', OrderController.list);    // Listar Todos (AGORA ESTÁ NO LUGAR CERTO)
+// --- ROTAS PÚBLICAS (Qualquer um pode acessar) ---
+router.post('/auth/register', AuthController.register); // Criar conta
+router.post('/auth/login', AuthController.login);       // Fazer login
 
-// --- 2. ROTAS DINÂMICAS (Devem vir por último) ---
-router.get('/order/:id', OrderController.getById);  // Buscar um
-router.put('/order/:id', OrderController.update);   // Atualizar
-router.delete('/order/:id', OrderController.delete);// Deletar
+// --- BARREIRA DE SEGURANÇA ---
+// Tudo o que estiver abaixo desta linha exige Token JWT
+router.use(authMiddleware); 
+
+// --- ROTAS PROTEGIDAS (Só com Token) ---
+router.post('/order', OrderController.create);
+router.get('/order/list', OrderController.list);
+router.get('/order/:id', OrderController.getById);
+router.put('/order/:id', OrderController.update);
+router.delete('/order/:id', OrderController.delete);
 
 module.exports = router;
